<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidPlot</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="accelerometer_data">Accelerometer Data</string>
    <string name="barometer_data">Barometer Data</string>
    <string name="gyroscope_data">Gyroscope Data</string>
    <string name="push_data">Push Data</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="start_value">Start value</string>
    <string name="end_value">End value</string>
    <string name="evaluate_file">Evaluate File</string>
	<string name="max_elements">Max Elements</string>
    <string name="simulation_start">Start Simulation</string>
    <string name="simulation_stop">Stop Simulation</string>
    <string name="dynamic_plot">Dynamic Plot</string>
    <string name="simple_plot">Simple Plot</string>
</resources>
